api rehaul + area2d

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
+    mavenCentral()
 }
 
 sourceSets {
@@ -17,4 +18,5 @@ sourceSets {
 }
 
 dependencies {
+    compile 'org.jetbrains:annotations:22.0.0'
 }
