Fix project setup + implement CombinedCast

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 sourceSets {
     main {
         java {
-            srcDirs = ['src']
+            srcDirs = ['src/main/java']
         }
     }
 }
