--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,5 @@ repositories {
 }
 
 dependencies {
-    compile 'org.jetbrains:annotations:22.0.0'
+    implementation 'org.jetbrains:annotations:22.0.0'
 }
