--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:22.0.0'
+    implementation 'org.jetbrains:annotations:23.0.0'
 }
 
 publishing {
@@ -21,3 +21,6 @@ publishing {
         }
     }
 }
+
+sourceCompatibility = 17
+targetCompatibility = 17
