--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,5 @@ publishing {
     }
 }
 
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
